# geotech

./: README.md  logging.cfg  pyproject.toml
src/geotech/: config.py  distributions.py  load.py  loads.py  settlement.py  soil.py  soils.py
tests/: test_settlement.py
