[project]
name = "geotech"
version = "0.1.0a1"
description = "A suite of tools for geotechnical engineering."
authors = [
    {name = "Sean Daly", email = "the_sean_c@fastmail.com"},
]
dependencies = [
    "numpy>=1.25.2",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "GNU AGPLv3"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
